# L-SMASH-Works

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml  win.yml
VapourSynth/: README  lsmashsource.c  lwlibav_source.c
common/: lwindex.c  lwindex.h  utils.c
ffmpeg/: 0021-MPEG-2-Video.patch  0022-Properly-check-chroma-subsampling-in-CUVID-decoder.patch  0023-Revert-avcodec-h264_parser-set-missing-pts-for-top-b.patch  0024-Revert-vc-1-Optimise-parser-with-special-attention-t.patch  portfile.cmake  vcpkg.json
include/: VSHelper.h  VapourSynth.h
